# LimeBar

./: .gitignore  .gitmodules  CMakeLists.txt  README.pod  cmake_uninstall.cmake.in
cmake_modules/: Pod2Man.cmake  Utils.cmake
include/: Area.hpp  Bar.hpp  CMakeLists.txt  Monitor.hpp  Resource.hpp  Singleton.hpp  Types.hpp
include/Core/: Area.hpp  Bar.hpp  CMakeLists.txt  ColorHandler.hpp  CustomOptionDescription.hpp  DatabaseHelper.hpp  FontHandler.hpp  Module.hpp  Monitor.hpp  OptionPrinter.hpp  Types.hpp  XHandler.hpp
include/Modules/Wrapper/: CMakeLists.txt  Module_Wrapper.hpp  Wrapper_Module.hpp  Wrapper_Thread.hpp
include/Modules/Wrapper/Remind/: Remind_Thread.hpp
include/Modules/remind/: CMakeLists.txt  remind.hpp
src/: Area.cpp  Bar.cpp  CMakeLists.txt  Monitor.cpp  Resource.cpp  example1.c  limebar.cpp
src/Core/: Area.cpp  Bar.cpp  CMakeLists.txt  ColorHandler.cpp  CustomOptionDescription.cpp  DatabaseHelper.cpp  FontHandler.cpp  Monitor.cpp  Types.cpp  XHandler.cpp  limebar.cpp
src/Modules/Wrapper/: CMakeLists.txt  Module_Wrapper.cpp  README.pod  Wrapper_Thread.cpp
src/Modules/Wrapper/Modules/Calendar/: CMakeLists.txt  calendar_module.cpp
src/Modules/Wrapper/Modules/Portage/: CMakeLists.txt  portage_module.cpp
src/Modules/Wrapper/Modules/Remind/: CMakeLists.txt  Remind_Thread.cpp  remind_module.cpp
src/Modules/Wrapper/Modules/i3-msg/: CMakeLists.txt  i3msg_module.cpp
src/Modules/i3/: CMakeLists.txt  README.pod  i3.cpp
src/Modules/portage/: CMakeLists.txt  README.pod  portage.cpp
src/Modules/remind/: CMakeLists.txt  README.pod  remind.cpp
